--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,8 +4,7 @@
 .card {
     padding: 3.2rem;
     width: 100%;
-    //max-width: 600px;
-    //min-width: 300px;
+    min-width: 255px;
     border: 2px solid royalblue;
     border-radius: 15px;
 
@@ -25,7 +24,7 @@
 
     &__time {
         @include text-preset1;
-        padding: 2.4rem 4.6rem 0.8rem 0;
+        padding: 2.4rem 0 0.8rem 0;
     }
 
     &__last-week {
