--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -22,7 +22,7 @@
     &__icon {
         position: absolute;
         top: -0.5em;
-        right: 1.5em;
+        right: 10%;
     }
 
     &__work {
