--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -55,6 +55,12 @@
         color: #fff;
         background-color: $neutral-purple-dark;
         border-radius: 15px;
+        transition: background-color .3s, scale .3s;
+
+        &:hover {
+            scale: 1.02;
+            background-color: #323878;
+        }
     }
 
     &__title-group {
